--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   firebase_auth: ^0.14.0+5
+  email_validator: '^1.0.0'
+  flutter_form_builder: ^7.1.1
+  flutter_pw_validator: ^1.4.2
   
 
 dev_dependencies:
