--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   firebase_core: ^1.14.0
   firebase_auth: ^3.3.13
   google_sign_in: ^5.3.0
+  shared_preferences: ^2.0.6
+  provider: ^6.0.2
+  cloud_firestore: ^3.1.12
+  font_awesome_flutter: ^9.2.0
   
   
 
