--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,23 @@ dependencies:
   provider: ^6.0.2
   cloud_firestore: ^3.1.12
   font_awesome_flutter: ^9.2.0
+  mb_contact_form: ^0.0.1
+  path_provider: ^2.0.9
+  qr_flutter: ^4.0.0
+  barcode_scan_fix: ^1.0.2
+  flutter_launcher_icons: ^0.9.2
   
   
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/logo/logo.png"
+flutter_test:
+  sdk: flutter
+  
     
 
   # The "flutter_lints" package below contains a set of recommended lints to
