--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   qr_flutter: ^4.0.0
   barcode_scan_fix: ^1.0.2
   flutter_launcher_icons: ^0.9.2
+  get: ^4.6.1
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
   
   
 
