--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   get: ^4.6.1
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  http: ^0.13.4
   
   
 
@@ -66,6 +67,7 @@ flutter_icons:
     image_path: "assets/logo/logo.png"
 flutter_test:
   sdk: flutter
+
   
     
 
